# stupidmoviepicker

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  UPGRADE_v0.9.md  app.py  auth.py  docker-compose.yml  forms.py  init_db.py  migrate_users.py  pyproject.toml  requirements.txt
.github/workflows/: .gitkeep  jekyll-gh-pages.yml
docs/: Gemfile  README.md  _config.yml  index.html  index.md
images/: README.md
images/screenshots/: README.md
static/: manifest.json  sw.js
static/css/: base.css  components.css  mobile.css
static/js/: admin.js  api.js  common.js  genre-detail.js  genres.js  index.js
templates/: admin.html  genre_detail.html  genres.html  index.html  movie_detail.html
templates/auth/: change_password.html  edit_profile.html  login.html  profile.html  register.html
tests/: test_api.py
